# Inferix

./: .clang-format  .gitignore  .ignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  build.sh  claude_lmstudio.sh  docker-compose.yml  main.cpp
docs/: arch.md
include/: app.h  ram_monitor.hpp
include/config/: config.h  configManager.h  config_manager.h
include/core/: IConfigManager.h  ICpuMonitor.h  IGpuMonitor.h  ILlamaServerProcess.h  IMemoryMonitor.h  IModelInfoMonitor.h  IModelsIni.h  appDependencies.h  eventBus.h  eventRouter.h  modelInfo.h  modelsIniEntry.h  tabLayout.h  terminalCoordinator.h
include/models/: memoryStats.h  memory_stats.h  processorStats.h  processor_stats.h  ram_stats.h
include/models/config/: modelSettings.h  model_settings.h  serverSettings.h  server_settings.h  uiSettings.h  ui_settings.h  userSettings.h  user_settings.h
include/panels/: inferenceSettingsPanel.h  inference_settings_panel.h  loadSettingsPanel.h  load_settings_panel.h  modelInfoPanel.h  modelPresetsPanel.h  model_presets_panel.h  modelsPanel.h  models_panel.h  serverInfoPanel.h  serverLogPanel.h  server_info_panel.h  settingsPanel.h  systemInfoPanel.h  systemResourcesPanel.h  system_info.h  system_info_panel.h  system_resources.h  system_resources_panel.h  terminalPanel.h  terminalPresetsPanel.h  terminal_panel.h
include/system/: cpuMonitor.h  cpu_monitor.h  gpuMonitor.h  gpu_monitor.h  httpClient.h  llamaServerProcess.h  modelInfoMonitor.h  ptyHandler.h  pty_handler.h  ramMonitor.h  ram_monitor.h  systemInfo.h  systemInfoUtils.h  systemMonitorRunner.h  system_info.h  system_info_utils.h  system_monitor_runner.h
include/utility/: modelDiscovery.h  modelsIni.h  ui_utils.h
src/: app.cpp  main.cpp  ram_linux.cpp
src/config/: config.cpp  configManager.cpp  config_manager.cpp
src/core/: eventBus.cpp  eventRouter.cpp  tabLayout.cpp  terminalCoordinator.cpp
src/system/: cpu.cpp  cpuLinux.cpp  cpuMonitor.cpp  cpuWindows.cpp  cpu_linux.cpp  cpu_monitor.cpp  cpu_windows.cpp  gpuMonitor.cpp  gpu_monitor.cpp  httpClient.cpp  llamaServerProcess.cpp  llamaServerProcessLinux.cpp  llamaServerProcessWindows.cpp  modelInfoMonitor.cpp  pty.cpp  ptyLinux.cpp  ptyWindows.cpp  pty_linux.cpp  pty_windows.cpp  ramLinux.cpp  ramMonitor.cpp  ramWindows.cpp  ram_linux.cpp  ram_monitor.cpp  ram_windows.cpp  systemInfoLinux.cpp  systemInfoUtils.cpp  systemInfoWindows.cpp  systemMonitorRunner.cpp  system_info_linux.cpp  system_info_utils.cpp  system_info_windows.cpp  system_monitor_runner.cpp
src/ui/panels/: inferenceSettingsPanel.cpp  inference_settings_panel.cpp  loadSettingsPanel.cpp  load_settings_panel.cpp  modelInfoPanel.cpp  modelPresetsPanel.cpp  model_presets_panel.cpp  modelsPanel.cpp  models_panel.cpp  serverInfoPanel.cpp  serverLogPanel.cpp  server_info_panel.cpp  settingsPanel.cpp  systemInfoPanel.cpp  systemResourcesPanel.cpp  system_info.cpp  system_info_panel.cpp  system_resources.cpp  system_resources_panel.cpp  terminalPanel.cpp  terminalPresetsPanel.cpp  terminal_panel.cpp
src/utility/: modelDiscovery.cpp  modelsIni.cpp  ui_utils.cpp
tests/: CMakeLists.txt  main.cpp
tests/config/: config_manager_presets_test.cpp  config_manager_test.cpp  config_serialization_test.cpp
tests/core/: event_bus_test.cpp
tests/mocks/: MockConfigManager.h  MockCpuMonitor.h  MockGpuMonitor.h  MockLlamaServerProcess.h  MockMemoryMonitor.h  MockModelInfoMonitor.h  MockModelsIni.h
tests/system/: cpu_monitor_test.cpp  gpu_monitor_test.cpp  http_client_test.cpp  llama_server_args_test.cpp  memory_monitor_test.cpp  model_info_monitor_test.cpp  pty_handler_test.cpp
tests/ui/panels/: ModelInfoPanelTest.cpp  ModelsPanelTest.cpp  ServerInfoPanelTest.cpp  SettingsPanelTest.cpp  SystemResourcesPanelTest.cpp  TerminalPresetsPanelTest.cpp
tests/utility/: model_discovery_test.cpp  models_ini_test.cpp
